feat(oapi): simplify api and use kri in origin
