# api/openapi/specs/common/resource.yaml
@@ -168,68 +168,25 @@ components:
           type: integer
         protocol:
           type: string
-        status:
-          type: string
-          enum: [ Ready, NotReady, Ignored ]
     DataplaneOutbound:
       type: object
       required: [ kri, protocol ]
       properties:
         kri:
           type: string
-        name:
-          type: string
         port:
           type: integer
         protocol:
           type: string
-    DataplaneProxyConf:
+    PoliciesList:
       type: object
-      required: [ rules ]
+      required: [ policies ]
       properties:
-        rules:
+        policies:
           type: array
-          description: The final computed configuration for the dataplane, derived by merging all policies whose 'targetRef' field matches the proxy. The merging process follows [RFC 7396 (JSON Merge Patch)](https://datatracker.ietf.org/doc/html/rfc7396), with the order of merging influenced by factors such as where the policy was applied (e.g., custom namespace, system, or global control plane), policy role, and targetRef specificity.
-          items:
-            $ref: '#/components/schemas/ProxyPolicyConf'
-    DataplaneInboundPolicyConf:
-      type: object
-      required: [ inbound, rules ]
-      properties:
-        inbound:
-          $ref: '#/components/schemas/DataplaneInbound'
-        policyConf:
-          type: array
-          description: The final computed configuration for the inbound, derived by merging all policies whose 'targetRef' field matches the proxy. The merging process follows [RFC 7396 (JSON Merge Patch)](https://datatracker.ietf.org/doc/html/rfc7396), with the order of merging influenced by factors such as where the policy was applied (e.g., custom namespace, system, or global control plane), policy role, and targetRef specificity.
+          description: The final computed configuration, derived by merging all policies whose 'targetRef' field matches the proxy. The merging process follows [RFC 7396 (JSON Merge Patch)](https://datatracker.ietf.org/doc/html/rfc7396), with the order of merging influenced by factors such as where the policy was applied (e.g., custom namespace, system, or global control plane), policy role, and targetRef specificity.
           items:
             $ref: '#/components/schemas/PolicyConf'
-    DataplaneOutboundPolicyConf:
-      type: object
-      required: [ outbound, rules ]
-      properties:
-        outbound:
-          $ref: '#/components/schemas/DataplaneOutbound'
-        rules:
-          type: array
-          description: The final computed configuration for the outbound, derived by merging all policies whose 'targetRef' field matches the proxy. The merging process follows [RFC 7396 (JSON Merge Patch)](https://datatracker.ietf.org/doc/html/rfc7396), with the order of merging influenced by factors such as where the policy was applied (e.g., custom namespace, system, or global control plane), policy role, and targetRef specificity.
-          items:
-            $ref: '#/components/schemas/PolicyConf'
-    ProxyPolicyConf:
-      description: a rule that affects the entire proxy
-      type: object
-      required: [ policyType, conf, origin ]
-      properties:
-        policyType:
-          type: string
-        conf:
-          description: The actual conf generated
-          type: object
-          additionalProperties: true
-          x-go-type: 'interface{}'
-        origin:
-          type: array
-          items:
-            $ref: '#/components/schemas/Meta'
     PolicyConf:
       type: object
       required: [ policyType, conf, origin ]
@@ -245,9 +202,9 @@ components:
             x-go-type: 'interface{}'
         origin:
           type: array
-          description: The list of policies that contributed to the 'conf'. The order is important as it reflects in what order confs were merged to get the resulting 'conf'.
+          description: The list of policies KRI that contributed to the 'conf'. The order is important as it reflects in what order confs were merged to get the resulting 'conf'.
           items:
-            $ref: '#/components/schemas/ResourceRuleOrigin'
+            type: string
     ProxyRule:
       description: a rule that affects the entire proxy
       type: object
