# api/openapi/types/common/zz_generated.resource.go
@@ -3,13 +3,6 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package types
 
-// Defines values for DataplaneInboundStatus.
-const (
-	Ignored  DataplaneInboundStatus = "Ignored"
-	NotReady DataplaneInboundStatus = "NotReady"
-	Ready    DataplaneInboundStatus = "Ready"
-)
-
 // Defines values for ResourceTypeDescriptionScope.
 const (
 	Global ResourceTypeDescriptionScope = "Global"
@@ -18,44 +11,17 @@ const (
 
 // DataplaneInbound defines model for DataplaneInbound.
 type DataplaneInbound struct {
-	Kri      string                  `json:"kri"`
-	Name     *string                 `json:"name,omitempty"`
-	Port     int                     `json:"port"`
-	Protocol string                  `json:"protocol"`
-	Status   *DataplaneInboundStatus `json:"status,omitempty"`
-}
-
-// DataplaneInboundStatus defines model for DataplaneInbound.Status.
-type DataplaneInboundStatus string
-
-// DataplaneInboundPolicyConf defines model for DataplaneInboundPolicyConf.
-type DataplaneInboundPolicyConf struct {
-	Inbound DataplaneInbound `json:"inbound"`
-
-	// PolicyConf The final computed configuration for the inbound, derived by merging all policies whose 'targetRef' field matches the proxy. The merging process follows [RFC 7396 (JSON Merge Patch)](https://datatracker.ietf.org/doc/html/rfc7396), with the order of merging influenced by factors such as where the policy was applied (e.g., custom namespace, system, or global control plane), policy role, and targetRef specificity.
-	PolicyConf *[]PolicyConf `json:"policyConf,omitempty"`
+	Kri      string  `json:"kri"`
+	Name     *string `json:"name,omitempty"`
+	Port     int     `json:"port"`
+	Protocol string  `json:"protocol"`
 }
 
 // DataplaneOutbound defines model for DataplaneOutbound.
 type DataplaneOutbound struct {
-	Kri      string  `json:"kri"`
-	Name     *string `json:"name,omitempty"`
-	Port     *int    `json:"port,omitempty"`
-	Protocol string  `json:"protocol"`
-}
-
-// DataplaneOutboundPolicyConf defines model for DataplaneOutboundPolicyConf.
-type DataplaneOutboundPolicyConf struct {
-	Outbound DataplaneOutbound `json:"outbound"`
-
-	// Rules The final computed configuration for the outbound, derived by merging all policies whose 'targetRef' field matches the proxy. The merging process follows [RFC 7396 (JSON Merge Patch)](https://datatracker.ietf.org/doc/html/rfc7396), with the order of merging influenced by factors such as where the policy was applied (e.g., custom namespace, system, or global control plane), policy role, and targetRef specificity.
-	Rules []PolicyConf `json:"rules"`
-}
-
-// DataplaneProxyConf defines model for DataplaneProxyConf.
-type DataplaneProxyConf struct {
-	// Rules The final computed configuration for the dataplane, derived by merging all policies whose 'targetRef' field matches the proxy. The merging process follows [RFC 7396 (JSON Merge Patch)](https://datatracker.ietf.org/doc/html/rfc7396), with the order of merging influenced by factors such as where the policy was applied (e.g., custom namespace, system, or global control plane), policy role, and targetRef specificity.
-	Rules []ProxyPolicyConf `json:"rules"`
+	Kri      string `json:"kri"`
+	Port     *int   `json:"port,omitempty"`
+	Protocol string `json:"protocol"`
 }
 
 // FromRule defines model for FromRule.
@@ -134,14 +100,20 @@ type Meta struct {
 	Type string `json:"type"`
 }
 
+// PoliciesList defines model for PoliciesList.
+type PoliciesList struct {
+	// Policies The final computed configuration, derived by merging all policies whose 'targetRef' field matches the proxy. The merging process follows [RFC 7396 (JSON Merge Patch)](https://datatracker.ietf.org/doc/html/rfc7396), with the order of merging influenced by factors such as where the policy was applied (e.g., custom namespace, system, or global control plane), policy role, and targetRef specificity.
+	Policies []PolicyConf `json:"policies"`
+}
+
 // PolicyConf defines model for PolicyConf.
 type PolicyConf struct {
 	// Conf The final computed configuration for the data plane proxy, derived by merging all policies whose 'targetRef' field matches the proxy. The merging process follows [RFC 7396 (JSON Merge Patch)](https://datatracker.ietf.org/doc/html/rfc7396), with the order of merging influenced by factors such as where the policy was applied (e.g., custom namespace, system, or global control plane), policy role, and targetRef specificity.
 	Conf []interface{} `json:"conf"`
 
-	// Origin The list of policies that contributed to the 'conf'. The order is important as it reflects in what order confs were merged to get the resulting 'conf'.
-	Origin     []ResourceRuleOrigin `json:"origin"`
-	PolicyType string               `json:"policyType"`
+	// Origin The list of policies KRI that contributed to the 'conf'. The order is important as it reflects in what order confs were merged to get the resulting 'conf'.
+	Origin     []string `json:"origin"`
+	PolicyType string   `json:"policyType"`
 }
 
 // PolicyDescription information about a policy
@@ -157,14 +129,6 @@ type PolicyDescription struct {
 
 	// IsTargetRef whether this policy uses targetRef matching
 	IsTargetRef bool `json:"isTargetRef"`
-}
-
-// ProxyPolicyConf a rule that affects the entire proxy
-type ProxyPolicyConf struct {
-	// Conf The actual conf generated
-	Conf       interface{} `json:"conf"`
-	Origin     []Meta      `json:"origin"`
-	PolicyType string      `json:"policyType"`
 }
 
 // ProxyRule a rule that affects the entire proxy
